--- a/templates/criar_usuario.html
+++ b/templates/criar_usuario.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Novo Usuário</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/criar_usuario.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='js/criar_usuario.js') }}">
+    <script src="{{ url_for('static', filename='js/criar_usuario.js') }}"></script>
 
 </head>
 <body>
